# python-templates

./: .gitignore  Makefile  README.md  TODO.md  project.txt  pycharm.txt  pyproject.toml  script.py  script_file.py  tester.py
pycharm/: pycharm.txt  update-typeshed.sh
src/: PROJECT
src/cli_project/: __main__.py  main.py  module.py  util.py
